--- a/style.css
+++ b/style.css
@@ -18,3 +18,12 @@ button{
     padding: 10px 20px 8px;
     width: 170px;
 }
+.overview {
+    background: transparent;
+    border: 1px solid #525252;
+    margin: 20px auto 10px; 
+    padding: 15px 30px;
+}
+div {
+    display: block;
+}
