--- a/style.css
+++ b/style.css
@@ -18,11 +18,16 @@ button{
     padding: 10px 20px 8px;
     width: 170px;
 }
+#body{
+    display: inline-block;
+    background-color: aqua;
+}
 .overview {
-    background: transparent;
+    background: antiquewhite;
     border: 1px solid #525252;
     margin: 20px auto 10px; 
     padding: 15px 30px;
+    width: 50%;
 }
 div {
     display: block;
